--- a/templates/store/create_store.html
+++ b/templates/store/create_store.html
@@ -63,6 +63,11 @@ CREATE YOUR WAAP FOLIO STORE
     {{ form.business_type }}
     {{ form.business_type.errors }}
 </p>
+<p>
+    {{ form.background_color.label_tag }}
+    {{ form.background_color }}
+    {{ form.background_color.errors }}
+</p>
 
 <p>
     {{ form.social.label_tag }}<small class="text-muted">(optional)</small>
